[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/LevelMenu.gd" type="Script" id=1]

[node name="LevelMenu" type="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -42.5
margin_right = 42.5
margin_bottom = 42.5
color = Color( 0, 0, 0, 0.980392 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
margin_right = 85.0
margin_bottom = 14.0
text = "Placeholder"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gap" type="HSeparator" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 85.0
margin_bottom = 22.0

[node name="ParLabel" type="Label" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 85.0
margin_bottom = 40.0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer2"]
margin_right = 85.0
margin_bottom = 20.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer2/StartButton" to="." method="_on_StartButton_pressed"]
